Edited product desc in index.html

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="brand" href="#">Bitstarter</a>
+          <a class="brand" href="#">String Puzzles</a>
           <div class="nav-collapse collapse">
             <ul class="nav">
               <li class="active"><a href="#">Home</a></li>
@@ -140,7 +140,7 @@
         <div class="span12">
           <!-- Special typography from Bootstrap for lead paragraph. -->
           <!-- http://twitter.github.io/bootstrap/base-css.html#typography -->
-          <p class="lead">Don't get tied up!</p>
+          <p class="lead">Don't get tie up!</p>
         </div>
       </div>
       <div class="row-fluid pitch">
@@ -212,7 +212,7 @@
             unravel the string as each pull and unloop either reduced the 
             complexity of knot or introduced downstream obstacles.  That gave 
             me the idea to start String Puzzles.  And to make it more
-            interesting, we will pay you if you can solve them!
+            interesting, we will pay you if you can solve them! Dubm Edit.
           </p>
         </div>
       </div>
