--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
             unravel the string as each pull and unloop either reduced the 
             complexity of knot or introduced downstream obstacles.  That gave 
             me the idea to start String Puzzles.  And to make it more
-            interesting, we will pay you if you can solve them!
+            interesting, we will pay you if you can solve them! And again.
           </p>
         </div>
       </div>
