--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
                 m.parentNode.insertBefore(a, m)
             })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
 
-            ga('create', 'UA-42964640-1', 'bitstarter.net');
+            ga('create', 'UA-42964640-1', 'herokuapp.com');
             ga('send', 'pageview');
         </script>
     </body>
